# gn_module_flore_prioritaire

./: .editorconfig  .gitignore  .prettierrc  .prettierrc.yaml  CHANGELOG.fr.md  CHANGELOG.md  MANIFEST.in  README.md  README.rst  install_db.sh  install_gn_module.py  manifest.toml  pyproject.toml  requirements.in  setup.py
backend/: _blueprint.py  blueprint.py  models.py
backend/gn_module_flore_prioritaire/: __init__.py  blueprint.py  conf_schema_toml.py  models.py
backend/gn_module_flore_prioritaire.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
backend/gn_module_flore_prioritaire/migrations/: acf3b4dbdbdc_create_branch_flore_prioritaire.py
backend/gn_module_priority_flora/: __init__.py  blueprint.py  conf_schema_toml.py  models.py  repositories.py  utils.py
backend/gn_module_priority_flora/migrations/: 020cf10ad5d1_declare_permission.py  0a97fffb151c_add_nomenclatures_shared_in_conservation_modules.py  0c9bb3b1e33a_add_default_dataset.py  355b375a9cb2_declare_available_perms.py  48b28d926cb6_add_export_zp.py  7e35f5a54cc8_improve_triggers.py  8785387b4689_add_id_dataset_foreign_key.py  955c298bac7b_add_specific_data.py  acf3b4dbdbdc_create_schema.py  d95854d81b68_add_synthese_triggers.py  f6092b0c6ef4_add_history_validation_triggers.py
config/: conf_gn_module.toml.example  conf_schema_toml.py  settings.ini.sample
data/: FP.sql  FP_habitat.sql  FP_nomenclatures.sql  FP_pente.sql  FP_perturbations.sql  FP_phenologie.sql  FP_physionomie.sql  insert_data_init.sql  migv1tov2.sh  sample_data.sql  v1tov2.sql  v1tov2_data_taxonomy.sql
docs/: install.md  priority_flora.postman_collection.json
frontend/: node_modules  package.json
frontend/app/: gnModule.config.ts  gnModule.module.ts  gnModule.routes.ts
frontend/app/_bs-map-form/: flore_prioritaire-map-form.component.ts
frontend/app/ap-add/: ap-add.component.html  ap-add.component.scss  ap-add.component.ts
frontend/app/ap-detail/: ap-detail.component.html  ap-detail.component.ts
frontend/app/ap-list/: ap-list.component.html  ap-list.component.scss  ap-list.component.ts
frontend/app/ap-list-add/: ap-list-add.component.html  ap-list-add.component.ts
frontend/app/components/: test.component.html  test.component.ts
frontend/app/flore_prioritaire-map-list/: flore_prioritaire-map-list.component.html  flore_prioritaire-map-list.component.ts
frontend/app/services/: data.service.ts  flore_prioritaire.service.ts  form.service.ts  store.service.ts
frontend/app/shared/: nomenclatures.ts
frontend/app/zp-add/: zp-add.component.html  zp-add.component.scss  zp-add.component.ts
frontend/app/zp-container/: zp-container.component.html  zp-container.component.scss  zp-container.component.ts
frontend/src/: styles.scss
odk/: bilan_stationnel_flore_prio.xlsx
(+33 files in other folders)
