[project]
name = "gn-module-priority-flora"
description = "GeoNature Priority Flora (aka Stational Assessment) module for Conservation."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["conservation", "stational", "assesslebt", "taxa", "flora"]
license = {file = "LICENSE"}
maintainers = [
    {name = "Conservatoire Botanique National Alpin", email = "geonature@cbn-alpin.fr"},
    {name = "Parcs national des Écrins", email = "geonature@ecrins-parcnational.fr"},
]
authors = [
    {name = "Cendrine HOARAU", email = "c.hoarau@cbn-alpin.fr"},
    {name = "Jean-Pascal MILCENT", email = "jp.milcent@cbn-alpin.fr"},
    {name = "Théo LECHEMIA"},
    {name = "Camille MONCHICOURT"},
    {name = "Nicolas ROUYER"},
    {name = "Richard VERGELY"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
urls.homepage = "https://github.com/PnX-SI/gn_module_flore_prioritaire"
urls.documentation = "https://github.com/PnX-SI/gn_module_flore_prioritaire"
urls.repository = "https://github.com/PnX-SI/gn_module_flore_prioritaire"
dynamic = ["version"]
dependencies = [
    "gn_conservation_backend_shared>=0.5.2",
    "geonature>=2.13"
]

[project.optional-dependencies]
dev = [
    "black",
    # Manually install gn_conservation_backend_shared with `pip install -e <path-to-gn-conservation-backend-shared>` if not installed in venv
]
prod = [
    "gn_conservation_backend_shared@git+https://github.com/cbn-alpin/gn_conservation_backend_shared.git@0.5.2",
]

[project.entry-points.gn_module]
code = "gn_module_priority_flora:MODULE_CODE"
picto = "gn_module_priority_flora:MODULE_PICTO"
blueprint = "gn_module_priority_flora.blueprint:blueprint"
config_schema = "gn_module_priority_flora.conf_schema_toml:GnModuleSchemaConf"
migrations = "gn_module_priority_flora:migrations"
alembic_branch = "gn_module_priority_flora:MODULE_DB_BRANCH"

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=60.0.0", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["backend"]
include = ["gn_module_priority_flora*"]
namespaces = true

[tool.setuptools.package-data]
"gn_module_monitoring_habitat_station.migrations.data" = ["*.sql", "*.csv"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "backend",
]

[tool.distutils.bdist_wheel]
universal = true

[tool.black]
line-length = 100
